--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discord Replica</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <span id="logo"> 
+                <a href="#">
+                    <img src="img/logo.svg">
+                </a>
+            </span>
+            <ul>
+                <li>
+                    <a href="#" class="normaltext">Scarica</a>
+                </li>
+                <li>
+                    <a href="#" class="normaltext">Perch&eacute; Discord</a>
+                </li>
+                <li>
+                    <a href="#" class="normaltext">Nitro</a>
+                </li>
+                <li>
+                    <a href="#" class="normaltext">Sicurezza</a>
+                </li>
+                <li>
+                    <a href="#" class="normaltext">Assistenza</a>
+                </li>
+            </ul>
+            <span id="accedi">
+                <a href="#" class="btn">
+                    Accedi
+                </a>
+            </span>
+        </nav>
+    </header>
+    <!-- 1------------------>
+    <div class="subcontainer c1 latpadding">
+        <div class="contentbox latpadding">
+            <h2>Il tuo posto per parlare</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
+            <div>
+                <a href="#" class="btn">
+                    <span><i class="fas fa-long-arrow-alt-down"></i>scarica per mac</span>
+                </a>
+                <a href="">
+                    <span class="btn blk">Apri Discord nel tuo browser</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- 2------------------>
+    <div class="subcontainer c2 latpadding">
+        <span class="img">
+            <img src="img/item1.svg" alt="" width="100%">
+        </span>
+        <span class="sectext">
+            <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
+        </span>
+    </div>
 </body>
 </html>
