--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <!-- 1------------------>
     <div class="subcontainer c1 latpadding">
         <div class="contentbox latpadding">
-            <h2>Il tuo posto per parlare</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
+            <h1 class="text3">Il tuo posto per parlare</h2>
+            <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
             <div>
                 <a href="#" class="btn">
-                    <span><i class="fas fa-long-arrow-alt-down"></i>scarica per mac</span>
+                    <span class="text1"><i class="fas fa-long-arrow-alt-down"></i> scarica per mac</span>
                 </a>
                 <a href="">
-                    <span class="btn blk">Apri Discord nel tuo browser</span>
+                    <span class="btn blk text1">Apri Discord nel tuo browser <i class="fas fa-desktop"></i></span>
                 </a>
             </div>
         </div>
@@ -61,9 +61,125 @@
             <img src="img/item1.svg" alt="" width="100%">
         </span>
         <span class="sectext">
-            <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
+            <h2 class="sectexth2-1 text2">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+            <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
         </span>
+    </div>
+    <!-- 3------------------>
+    <div class="subcontainer c2 latpadding">
+        <span class="sectext">
+            <h2 class="sectexth2-2 text2">Dove trovarsi è facile</h2>
+            <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae</p>
+        </span>
+        <span class="img">
+            <img src="img/item2.svg" alt="" width="100%">
+        </span>
+    </div>
+    <!-- 4------------------>
+    <div class="subcontainer c2 latpadding">
+        <span class="img">
+            <img src="img/item3.svg" alt="" width="100%">
+        </span>
+        <span class="sectext">
+            <h2 class="sectexth2-1 text2">Da pochi a un fandom</h2>
+            <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
+        </span>
+    </div>
+    <!-- 5------------------>
+    <div class="subcontainer c2 latpadding">
+        <span class="sectextlast">
+            <h2 class="text2">Tecnologia affidabile per tenersi in contatto</h2>
+            <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
+        </span>
+        <span class="img">
+            <img src="img/item4-big.svg"">
+        </span>
+        <div class="sectextlastunder">
+            <h2 class="text2">Pronto a iniziare la tu avventura?</h2>
+        </div>
+        <div class="lastbutton">
+            <a href="#" class="btnlast">
+                <span class="text1"><i class="fas fa-long-arrow-alt-down"></i> scarica per mac</span>
+            </a>
+        </div>
+    </div>
+    <!-- 6------------------>
+    <div class="subcontainer c2 c3 latpadding">
+        <div class="container1foot">
+            <div class="subcontainerfoot1">
+                <h2 class="text2 foottext2">Il tuo posto per parlare</h2>
+                <span class="text1"><img src="/img/ita.png" alt="" width="15%"> Italiano <i class="fas fa-chevron-down"></i></span>
+                <ul>
+                    <li>
+                        <a href="#"><i class="fab fa-twitter texticon"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-instagram texticon"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fab fa-facebook texticon"></i></a>
+                    </li>
+                    <li>
+                        <a href="#"> <i class="fab fa-youtube texticon"></i></span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="container2foot">
+            <ul class="text1">
+                <li class="footerlisttitle">Prodotto</li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+            </ul>
+        </div>
+        <div class="container2foot">
+            <ul class="text1">
+                <li class="footerlisttitle">Compagnia</li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+            </ul>
+        </div>
+        <div class="container2foot">
+            <ul class="text1">
+                <li class="footerlisttitle">Risorse</li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+            </ul>
+        </div>
+        <div class="container2foot">
+            <ul class="text1">
+                <li class="footerlisttitle">Norme</li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+            </ul>
+        </div>
+        <hr>
+        <span id="logo"> 
+            <a href="#">
+                <img src="img/logo.svg"  class="bottomlogo">
+            </a>
+        </span>
+        <div class="lastbuttonfooter">
+                <a href="#" class="btnfoot">
+                    Accedi
+                </a>
+        </div>
     </div>
 </body>
 </html>
