--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <img src="img/logo.svg">
                 </a>
             </span>
-            <ul>
+            <ul class="menu">
                 <li>
                     <a href="#" class="normaltext">Scarica</a>
                 </li>
@@ -57,17 +57,17 @@
     </div>
     <!-- 2------------------>
     <div class="subcontainer c2 latpadding">
-        <span class="img">
+        <span class="img left">
             <img src="img/item1.svg" alt="" width="100%">
         </span>
-        <span class="sectext">
+        <span class="sectext left">
             <h2 class="sectexth2-1 text2">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
             <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
         </span>
     </div>
     <!-- 3------------------>
     <div class="subcontainer c2 latpadding">
-        <span class="sectext">
+        <span class="sectext left">
             <h2 class="sectexth2-2 text2">Dove trovarsi è facile</h2>
             <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae</p>
         </span>
@@ -77,10 +77,10 @@
     </div>
     <!-- 4------------------>
     <div class="subcontainer c2 latpadding">
-        <span class="img">
+        <span class="img left">
             <img src="img/item3.svg" alt="" width="100%">
         </span>
-        <span class="sectext">
+        <span class="sectext left">
             <h2 class="sectexth2-1 text2">Da pochi a un fandom</h2>
             <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
         </span>
@@ -91,8 +91,8 @@
             <h2 class="text2">Tecnologia affidabile per tenersi in contatto</h2>
             <p class="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error ipsa iste accusamus vel, distinctio impedit rem magni labore, deleniti eos vitae, quae praesentium vero reiciendis? Eaque ratione odit accusantium nam?</p>
         </span>
-        <span class="img">
-            <img src="img/item4-big.svg"">
+        <span class="imgbig">
+            <img src="img/item4-big.svg">
         </span>
         <div class="sectextlastunder">
             <h2 class="text2">Pronto a iniziare la tu avventura?</h2>
@@ -104,82 +104,62 @@
         </div>
     </div>
     <!-- 6------------------>
-    <div class="subcontainer c2 c3 latpadding">
-        <div class="container1foot">
-            <div class="subcontainerfoot1">
-                <h2 class="text2 foottext2">Il tuo posto per parlare</h2>
-                <span class="text1"><img src="/img/ita.png" alt="" width="15%"> Italiano <i class="fas fa-chevron-down"></i></span>
+    <footer class="subcontainer c2 c3 latpadding">
+        <div class="row1footer">
+            <div class="footbox">
+                <div class="text2 footerlisttitle">Il tuo posto per parlare</div>
+                <img src="img/ita.png" class="ita" width="10%">
+                <span class="text1 whitetext"> Italiano </span>
+                <i class="fas fa-chevron-down ita whitetext"></i>
+            </div>
+            <div class="footlist">
                 <ul>
-                    <li>
-                        <a href="#"><i class="fab fa-twitter texticon"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fab fa-instagram texticon"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fab fa-facebook texticon"></i></a>
-                    </li>
-                    <li>
-                        <a href="#"> <i class="fab fa-youtube texticon"></i></span></a>
-                    </li>
+                    <li><a href="#" class="footerlisttitle">Prodotto</a></li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perchè Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
                 </ul>
             </div>
+            <div class="footlist">
+                <ul>
+                    <li><a href="#" class="footerlisttitle">Compagnia</a></li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perchè Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
+            </div>
+            <div class="footlist">
+                <ul>
+                    <li><a href="#" class="footerlisttitle">Risorse</a></li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perchè Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
+            </div>
+            <div class="footlist">
+                <ul>
+                    <li><a href="#" class="footerlisttitle">Norme</a></li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perchè Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
+            </div>
+         </div>
+        <div class="bottomfooter">
+            <img src="img/logo.svg" class="left">
+            <span class="btnlast right">Registrati</span>
         </div>
-        <div class="container2foot">
-            <ul class="text1">
-                <li class="footerlisttitle">Prodotto</li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-            </ul>
-        </div>
-        <div class="container2foot">
-            <ul class="text1">
-                <li class="footerlisttitle">Compagnia</li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-            </ul>
-        </div>
-        <div class="container2foot">
-            <ul class="text1">
-                <li class="footerlisttitle">Risorse</li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-            </ul>
-        </div>
-        <div class="container2foot">
-            <ul class="text1">
-                <li class="footerlisttitle">Norme</li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-            </ul>
-        </div>
-        <hr>
-        <span id="logo"> 
-            <a href="#">
-                <img src="img/logo.svg"  class="bottomlogo">
-            </a>
-        </span>
-        <div class="lastbuttonfooter">
-                <a href="#" class="btnfoot">
-                    Accedi
-                </a>
-        </div>
-    </div>
+    </footer>
 </body>
 </html>
